# potions

./: .gitignore  mcmc_results.csv  mcmc_samples.npy  pyproject.toml  setup.py
.continue/relevant-information/: model-structure.md
.continue/rules/: comment-conventions.md  response-conventions.md
.github/workflows/: build.yml
doc/: Description.md  Governing Equations.md  Makefile  Reactive Transport Inputs.md  Reactive Transport.md  common_types.rst  common_types_compiled.rst  conf.py  index.rst  interfaces.rst  math_compiled.rst  model.rst  modules.rst  objective_functions.rst  reaction_network.rst  utils.rst
notebooks/: Equilibrium.ipynb  Extremes Comparison.ipynb  Graph Visualization.ipynb  Lapse Rates.ipynb  Markov-Chain Monte Carlo.ipynb  Run Hydrological Model.ipynb  Run Reactive Transport Model.ipynb  Run Simple Hydrologic Model.ipynb  Run Simple Model.ipynb  calibrate_model.ipynb  calibrate_model.py  chemical_database.json  connection_matrices.ipynb  construct_forcing.ipynb  construct_odes.ipynb  construct_reaction_network.ipynb  example-reactive-transport.ipynb  exploration.ipynb  load_database_components.ipynb  model.py  profile-hydro-model.ipynb  run_model.ipynb  running_hydrologic_model.ipynb
notebooks/database_components/: aqeous_kinetic_species.txt  exchange_species.txt  gas_species.txt  mineral_kinetic_parameters.txt  (+6 more)
rust/: Cargo.toml  Cross.toml  Dockerfile.windows
rust/src/: common_types.rs  hydro.rs  lib.rs  math.rs
rust/src/reactive_transport/: database.rs  kinetic_structures.rs  mod.rs  reaction_network.rs  river_zone.rs  rt_zone.rs
(+38 files in other folders)
