[build-system]
requires = ["maturin>=1.11"]
build-backend = "maturin"

[project]
authors = [{ name = "Andrew Vierbicher", email = "acv5255@psu.edu" }]
name = "potions-model"
version = "0.0.1"
dependencies = ["numpy", "scipy", "pandas", "matplotlib", "emcee", "networkx"]
description = "A simple and flexible hydrologic modeling package"
requires-python = ">= 3.10"

# [tool.setuptools]
# package-dir = {"" = "src"}

# [tool.setuptools.packages.find]
# where = ["src"]

[tool.maturin]
python-source = "src"
features = ["pyo3/extension-module"]
manifest-path = "rust/Cargo.toml"
module-name = "potions.core"
