[package]
name = "potions"
version = "0.0.1"
edition = "2021"

[lib]
name = "core"
crate-type = ["cdylib"]

[dependencies]
ndarray-linalg = {version="0.18.1", features=["openblas-system"]}
numpy = "0.27.0"
polars = {version="0.53.0", features=["ndarray"]}
pyo3 = { version = "0.27", features = ["extension-module"]}
pyo3-polars = "0.26.0"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
uom = {version="0.38.0", features=["serde"]}
